fix: remove backface visibility to get rid of nasty glitch

--- a/app/styles/popup.css
+++ b/app/styles/popup.css
@@ -1,5 +1,4 @@
 body {
-  -webkit-backface-visibility: hidden;
   width: 350px;
 }
 
